corrected some xml icons

--- a/px-checkout/src/main/res/layout/px_fragment_exploding.xml
+++ b/px-checkout/src/main/res/layout/px_fragment_exploding.xml
@@ -45,7 +45,7 @@
             tools:visibility="visible"/>
 
 
-        <ImageView
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/cho_loading_buy_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
