--- a/px-checkout/src/main/res/layout/px_view_rounded_icon.xml
+++ b/px-checkout/src/main/res/layout/px_view_rounded_icon.xml
@@ -3,14 +3,16 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="@dimen/px_m_height"
              android:layout_height="@dimen/px_m_height"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@drawable/px_light_grey_circle">
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:adjustViewBounds="true"
+        app:actualImageScaleType="fitCenter"
         android:padding="@dimen/px_xxs_margin"
         tools:src="@drawable/px_rapipago"/>
 
