--- a/px-checkout/src/main/res/values/ids.xml
+++ b/px-checkout/src/main/res/values/ids.xml
@@ -4,4 +4,5 @@
     <item name="px_fragment_container_bottom" type="id"/>
     <item name="px_main_container" type="id"/>
     <item name="px_button_primary" type="id"/>
+    <item name="px_button_secondary" type="id"/>
 </resources>
