--- a/px-checkout/src/main/res/layout/px_onetap_fragment.xml
+++ b/px-checkout/src/main/res/layout/px_onetap_fragment.xml
@@ -13,15 +13,18 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
+            android:background="@color/px_colorPrimary"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/px_transparent"
+            android:theme="@style/ToolbarTheme"
+            app:titleTextColor="@color/px_expressCheckoutTextColor"
             android:elevation="0dp"
             app:contentInsetStartWithNavigation="0dp"
             app:elevation="0dp">
 
             <ViewSwitcher
+                android:background="@color/px_colorPrimary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -36,17 +39,19 @@
                     android:orientation="horizontal"
                     app:px_element_icon_height="?attr/actionBarSize"
                     app:px_element_icon_width="?attr/actionBarSize"
-                    app:px_element_label_size="@dimen/px_l_text"/>
+                    app:px_element_label_size="@dimen/px_l_text"
+                    app:px_element_label_text_color="@color/px_expressCheckoutTextColor"/>
 
             </ViewSwitcher>
         </android.support.v7.widget.Toolbar>
 
         <com.mercadopago.android.px.internal.view.SummaryView
+            android:background="@color/px_colorPrimary"
             android:id="@+id/summary_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="@dimen/px_xxs_margin"/>
+            android:padding="@dimen/px_xxs_margin"/>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/payment_method_pager"
@@ -60,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             app:px_spi_dotColor="#19000000"
-            app:px_spi_dotSelectedColor="#3483fa"/>
+            app:px_spi_dotSelectedColor="@color/px_colorPrimary"/>
 
     </LinearLayout>
 
