added discount color configuration

--- a/px-checkout/src/main/res/values/colors.xml
+++ b/px-checkout/src/main/res/values/colors.xml
@@ -170,6 +170,8 @@
 
     <color name="px_paymentMethodTint">@color/px_colorPrimary</color>
 
+    <!-- Express checkout configurations-->
     <color name="px_expressCheckoutTextColor">@color/px_white</color>
+    <color name="px_expressCheckoutTextColorDiscount">@color/px_white</color>
 
 </resources>
