--- a/px-checkout/src/main/res/drawable/px_account_money_rounded_shape.xml
+++ b/px-checkout/src/main/res/drawable/px_account_money_rounded_shape.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="#00a3da"/>
+        android:color="@color/px_transparent"/>
 
     <stroke
         android:width="1dp"
