--- a/px-checkout/src/main/res/layout/px_fragment_change_payment_method.xml
+++ b/px-checkout/src/main/res/layout/px_fragment_change_payment_method.xml
@@ -23,13 +23,16 @@
             android:orientation="vertical">
 
             <android.support.design.widget.FloatingActionButton
+                android:layout_marginTop="@dimen/px_xs_margin"
                 android:id="@+id/floating_change"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:elevation="@dimen/px_xxs_margin"
+                android:elevation="@dimen/px_xxxs_margin"
+                android:tint="@color/ui_components_primary_color"
+                app:elevation="@dimen/px_xxxs_margin"
                 app:backgroundTint="@color/px_white"
-                app:elevation="@dimen/px_xxs_margin"
+                app:srcCompat="@android:drawable/ic_input_add"
                 app:fabSize="normal"/>
 
             <com.mercadolibre.android.ui.widgets.MeliButton
