--- a/px-checkout/src/main/res/layout/px_onetap_fragment.xml
+++ b/px-checkout/src/main/res/layout/px_onetap_fragment.xml
@@ -13,20 +13,20 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
-            android:background="@color/px_colorPrimary"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:theme="@style/ToolbarTheme"
-            app:titleTextColor="@color/px_expressCheckoutTextColor"
+            android:background="@color/px_colorPrimary"
             android:elevation="0dp"
+            android:theme="@style/ToolbarTheme"
             app:contentInsetStartWithNavigation="0dp"
-            app:elevation="0dp">
+            app:elevation="0dp"
+            app:titleTextColor="@color/px_expressCheckoutTextColor">
 
             <ViewSwitcher
-                android:background="@color/px_colorPrimary"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@color/px_colorPrimary">
 
                 <ViewStub
                     android:layout_width="wrap_content"
@@ -46,24 +46,25 @@
         </android.support.v7.widget.Toolbar>
 
         <com.mercadopago.android.px.internal.view.SummaryView
-            android:background="@color/px_colorPrimary"
             android:id="@+id/summary_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:background="@color/px_colorPrimary"
             android:padding="@dimen/px_xxs_margin"/>
 
         <com.mercadopago.android.px.internal.view.InstallmentsDescriptorView
             android:id="@+id/installments_descriptor"
-            android:layout_marginLeft="@dimen/px_m_margin"
-            android:layout_marginStart="@dimen/px_m_margin"
-            android:layout_marginEnd="@dimen/px_m_margin"
-            android:layout_marginRight="@dimen/px_m_margin"
-            android:layout_marginTop="@dimen/px_s_margin"
-            android:layout_gravity="center_vertical"
-            android:textSize="@dimen/px_s_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="@dimen/px_m_margin"
+            android:layout_marginLeft="@dimen/px_m_margin"
+            android:layout_marginRight="@dimen/px_m_margin"
+            android:layout_marginStart="@dimen/px_m_margin"
+            android:layout_marginTop="@dimen/px_s_margin"
+            android:textSize="@dimen/px_s_text"/>
+
 
         <android.support.v4.view.ViewPager
             android:id="@+id/payment_method_pager"
